jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - devops-ci.mbraptor.tech
    secretName: tls-mbraptor.tech
  rules:
  - host: devops-ci.mbraptor.tech
    http:
      paths:
      - backend:
          serviceName: ci-jenkins
          servicePort: 8080
